Fix spacing on st giles header

--- a/src/targets/stGiles/styles/views/Header/index.less
+++ b/src/targets/stGiles/styles/views/Header/index.less
@@ -1,7 +1,7 @@
 @import "./mobile";
 
 .Header {
-  padding: 18px 130px 16px 130px;
+  padding: 18px 130px 17px 130px;
   height: 70px;
   box-sizing: border-box;
   width: 100%;
@@ -33,8 +33,8 @@
 }
 
 .Header__logo {
-  width: 400px;
-  height: 41px;
+  width: 380px;
+  height: 36px;
 }
 
 .Header__profile {
